New Crowdin updates (#1924)

--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "Chargement impossible !",
   "app.errors.unexpectedError": "Une erreur inconnue s'est produite. Veuillez réessayer.",
   "app.errors.unknowError": "Erreur inconnue.",
+  "button.buySellAda": "Buy / Sell ADA",
+  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
+  "buysell.dialog.manual": "I will add my address manually",
+  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.title": "Buy / Sell ADA",
   "crash.screen.title": "Yoroi a planté",
   "daedalusTransfer.error.noTransferTxError": "Il n'y pas de transaction à envoyer.",
   "daedalusTransfer.error.transferFundsError": "Impossible d'envoyer les fonds.",
@@ -70,9 +75,11 @@
   "global.copyTooltipMessage": "Copié",
   "global.errors.fieldIsRequired": "Veuillez remplir ce champ.",
   "global.errors.invalidPaperPassword": "Le mot de passe de Wallet Papier requiert au moins 10 caractères.",
+  "global.errors.invalidPin": "Code PIN invalide",
   "global.errors.invalidRepeatPassword": "Ne correspond pas.",
   "global.errors.invalidWalletName": "La longueur du nom d'un wallet doit être comprise entre 1 et 40 caractères.",
   "global.errors.invalidWalletPassword": "Le mot de passe de dépense requiert au moins 10 caractères.",
+  "global.errors.pinDoesNotMatch": "Le code PIN ne correspond pas",
   "global.invalidKeyFormat.label": "Clé non valide. Doit être encodée en hexadécimal.",
   "global.invalidKeyLength.label": "Clé non valide. Doit comporter {length} caractères.",
   "global.invalidKeyLength2.label": "Clé non valide. Devrait être l'une des {lengths}.",
@@ -107,13 +114,13 @@
   "global.labels.note": "Note:",
   "global.labels.optionalMemo": "Mémo (optionnel)",
   "global.labels.processing": "Processing...",
-  "global.labels.register": "Enregistrer",
   "global.labels.remove": "Enlever",
   "global.labels.rewardsLabel": "Récompenses",
   "global.labels.save": "Sauvegarder",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Clé de paiement",
   "global.labels.spendingKeyHash": "Hash de la clé de paiement",
+  "global.labels.stakepool": "!!!Nom du Pool",
   "global.labels.stakingKey": "Clé de Staking",
   "global.labels.stakingKeyHash": "Hash de la clé de staking",
   "global.labels.upgrade": "Mettre à jour",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turc",
   "global.passwordInstructionsPaperWallet": "Remarque : le mot de passe du Wallet Papier doit contenir au moins <strong>10 caractères</strong>.",
-  "global.selectAsset.labael": "Sélectionner un actif",
   "global.publicKey.explanation": "Les clés publiques permettent de voir l'historique du wallet, mais <strong>ne permettent pas</strong> de dépenser ou de déplacer les fonds d'aucune manière (la clé privée <strong>n'est pas</strong> incluse)",
+  "global.selectAsset.labael": "Sélectionner un actif",
   "global.staleTxnWarningLine1": "Votre wallet a changé depuis que vous avez créé cette transaction.",
   "global.staleTxnWarningLine2": "Vous pouvez toujours envoyer cette transaction, mais elle pourrait échouer.",
   "global.uriExplanation": "Ceux-ci vous permettent de partager facilement vos factures avec vos amis et entreprises en cliquant simplement sur une URL.",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "Voulez-vous inclure la clé <strong>publique</strong> de votre portefeuille dans les journaux d'erreurs ?",
   "wallet.includeKey.withKeyLabel": "Avec la clé",
   "wallet.includeKey.withoutKeyLabel": "Sans clé",
+  "wallet.insufficientFunds.subtitle": "Votre participation requiert au moins {requiredBalance} {tokenName}, mais vous n'avez que {currentBalance}. Les récompenses non réclamées ne sont pas incluses dans ce montant",
+  "wallet.insufficientFunds.title": "Fonds insuffisants",
   "wallet.nav.addButton": "Ajouter un nouveau wallet",
   "wallet.nav.allWalletsLabel": "Tous mes wallets",
   "wallet.nav.backButton": "Retour à mes wallets",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "en attente",
   "wallet.transaction.transactionAmount": "Montant de la transaction",
   "wallet.transaction.transactionId": "Numéro d'identification de la transaction",
+  "wallet.transaction.transactionMetadata": "Métadonnée de transaction",
   "wallet.transaction.type": "transaction en {currency}",
   "wallet.transaction.type.exchange": "Échange",
   "wallet.transaction.type.intrawallet": "Transaction entre wallets {currency}",
   "wallet.transaction.type.multiparty": "Transaction multiparties {currency}",
   "wallet.transaction.withdraw": "Retrait",
   "wallet.transaction.withdrawalsLabel": "Retraits",
-  "wallet.transaction.transactionMetadata": "Métadonnée de transaction",
   "wallet.transfer.cards.byron": "Wallet de l'ère Byron",
   "wallet.transfer.cards.shelley": "Wallet de type Shelley",
   "wallet.transfer.deregister.deregister": "Désenregistrer",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
   "wallet.unsupported.subtitle": "Le portefeuille sélectionné ne prend pas en charge cette fonctionnalité",
   "wallet.unsupported.title": "Type de portefeuille non supporté",
-  "wallet.voting.transaction.success.button.label": "Tableau de bord",
-  "wallet.voting.transaction.success.explanation": "Explication TODO",
-  "wallet.voting.transaction.success.title": "Enregistrement réussi",
+  "wallet.voting.dialog.completeLabel": "Compléter",
+  "wallet.voting.dialog.confirmPin": "Confirmer le code PIN",
+  "wallet.voting.dialog.registerLabel": "S'inscrire",
+  "wallet.voting.dialog.step.confirm.line1": "Veuillez entrer le code PIN car vous en aurez besoin <strong>à chaque fois</strong> que vous voudrez accéder à l'application de vote Catalyst.",
+  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirmer que j'ai bien écrit le code PIN",
+  "wallet.voting.dialog.step.pin.line1": "Veuillez noter ce code PIN car vous en aurez besoin <strong>à chaque fois</strong> que vous voudrez accéder à l'application de vote Catalyst.",
+  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirmer que j'ai bien sauvegardé le QR code",
+  "wallet.voting.dialog.step.qr.line2": "Le code QR suivant est le certificat généré requis par l'application Catalyst pour pouvoir participer au processus de vote de Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Nous vous suggérons également de prendre une capture d'écran en guise de sauvegarde - vous ne pourrez pas accéder à ce code QR après avoir cliqué sur Terminer.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Utilisez l'application Catalyst Voting pour scanner le code QR",
+  "wallet.voting.dialog.step.register.line1": "Entrez votre mot de passe de dépense pour pouvoir générer le certificat requis pour le vote.",
+  "wallet.voting.dialog.step.trx.line1": "Confirmez votre mot de passe de dépense pour inscrire dans le blockchain le certificat précédemment généré pour le vote.",
+  "wallet.voting.dialog.stepConfirm": "Confirmer",
+  "wallet.voting.dialog.stepPin": "Code PIN",
+  "wallet.voting.dialog.stepQrCode": "Code QR",
+  "wallet.voting.dialog.title": "S'inscrire pour voter",
+  "wallet.voting.dialog.transactionLabel": "Transaction",
+  "wallet.voting.line2": "Avant de commencer, assurez-vous de suivre les étapes suivantes",
+  "wallet.voting.line3": "Télécharger l'application Catalyst Voting.",
+  "wallet.voting.line4": "Ouvrez l'application Catalyst Voting App et cliquez sur le bouton Compléter l'inscription.",
+  "wallet.voting.lineTitle": "S'enregistrer pour voter au Fund 3",
   "wallet.withdrawal.transaction.unregister": "Cette opération va désinscrire une ou plusieurs clés de staking, ce qui vous permettra de récupérer votre dépôt de {refundAmount} {ticker}",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copier dans le presse-papier",
   "widgets.explorer.tooltip": "Aller sur {websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Génération d'une transaction de transfert",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Vérification des fonds des adresses",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Obtention des adresses",
-  "yoroiTransfer.waiting.title.label": "Le portefeuille est en cours de restauration",
-  "wallet.voting.dialog.step.confirm.line1": "Veuillez entrer le code PIN car il sera utilisé dans une étape ultérieure pour compléter le processus d'enregistrement dans l'application Catalyst Voting.",
-  "wallet.voting.dialog.step.pin.line1": "Veuillez noter ce code PIN car il sera utilisé dans une étape ultérieure pour compléter le processus d'enregistrement dans l'application Catalyst Voting.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Utilisez l'application Catalyst Voting pour scanner le code QR",
-  "wallet.voting.dialog.step.qr.line2": "Le code QR suivant est le certificat généré requis par l'application Catalyst pour pouvoir participer au processus de vote de Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "Nous vous suggérons également de prendre une capture d'écran en guise de sauvegarde - vous ne pourrez pas accéder à ce code QR après avoir cliqué sur Terminer.",
-  "wallet.voting.dialog.step.register.line1": "Entrez votre mot de passe de dépense pour pouvoir générer le certificat requis pour le vote.",
-  "wallet.voting.lineTitle": "Tout ADA enregistré en transaction pour voter sera transféré de votre wallet actuellement sélectionné",
-  "wallet.voting.line2": "Avant de commencer, assurez-vous de suivre les étapes suivantes",
-  "wallet.voting.line3": "Télécharger l'application Catalyst Voting.",
-  "wallet.voting.line4": "Ouvrez l'application Catalyst Voting App et cliquez sur le bouton Compléter l'inscription.",
-  "wallet.voting.dialog.step.trx.line1": "Confirmez votre mot de passe de dépense pour inscrire dans le blockchain le certificat précédemment généré pour le vote.",
-  "wallet.voting.dialog.stepPin": "Code PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirmer",
-  "wallet.voting.dialog.registerLabel": "S'inscrire",
-  "wallet.voting.dialog.transactionLabel": "Transaction",
-  "wallet.voting.dialog.stepQrCode": "Code QR",
-  "wallet.voting.dialog.title": "S'inscrire pour voter",
-  "wallet.voting.dialog.confirmPin": "Confirmer le code PIN",
-  "wallet.voting.dialog.completeLabel": "Compléter",
-  "global.errors.pinDoesNotMatch": "Le code PIN ne correspond pas",
-  "global.errors.invalidPin": "Code PIN invalide",
-  "button.buySellAda": "Acheter/Vendre ADA"
+  "yoroiTransfer.waiting.title.label": "Le portefeuille est en cours de restauration"
 }
