--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "Не удалось загрузить!",
   "app.errors.unexpectedError": "Случилось что-то непредвиденное. Пожалуйста, повторите попытку.",
   "app.errors.unknowError": "Неизвестная ошибка.",
+  "button.buySellAda": "Buy / Sell ADA",
+  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
+  "buysell.dialog.manual": "I will add my address manually",
+  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.title": "Buy / Sell ADA",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Нет транзакций для отправки.",
   "daedalusTransfer.error.transferFundsError": "Не удается перевести средства.",
@@ -70,9 +75,11 @@
   "global.copyTooltipMessage": "Скопировано",
   "global.errors.fieldIsRequired": "Это поле обязательно к заполнению.",
   "global.errors.invalidPaperPassword": "Пароль бумажного кошелька должен содержать не менее 10 символов.",
+  "global.errors.invalidPin": "Invalid Pin",
   "global.errors.invalidRepeatPassword": "Не совпадает.",
   "global.errors.invalidWalletName": "Длина имени кошелька должна быть не менее 1 и не более 40 букв.",
   "global.errors.invalidWalletPassword": "Пароль должен содержать не менее 10 символов.",
+  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
   "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
   "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
   "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
@@ -107,13 +114,13 @@
   "global.labels.note": "Note:",
   "global.labels.optionalMemo": "Заметка (опционально)",
   "global.labels.processing": "Обработка...",
-  "global.labels.register": "Register",
   "global.labels.remove": "Удалить",
   "global.labels.rewardsLabel": "Награды",
   "global.labels.save": "Сохранить",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakepool": "!!!Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Примечание: Пароль бумажного кошелька должен содержать не менее <strong>10 символов</strong>.",
-  "global.selectAsset.labael": "Select asset",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
+  "global.selectAsset.labael": "Select asset",
   "global.staleTxnWarningLine1": "Ваш кошелек был изменен с момента создания этой транзакции.",
   "global.staleTxnWarningLine2": "Вы все еще можете отправить эту транзакцию, но она может быть неудачной.",
   "global.uriExplanation": "Это позволяет легко обмениваться счетами с друзьями и компаниями, просто щелкнув на URL-адрес.",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
   "wallet.includeKey.withKeyLabel": "With key",
   "wallet.includeKey.withoutKeyLabel": "Without key",
+  "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
+  "wallet.insufficientFunds.title": "Insufficient funds",
   "wallet.nav.addButton": "Добавить кошелек",
   "wallet.nav.allWalletsLabel": "Все кошельки",
   "wallet.nav.backButton": "Назад в мои кошельки",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "в ожидании",
   "wallet.transaction.transactionAmount": "Сумма транзакции",
   "wallet.transaction.transactionId": "ID транзакции",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transaction.type": "{currency} транзакции",
   "wallet.transaction.type.exchange": "Обмен",
   "wallet.transaction.type.intrawallet": "{currency} внутренняя транзакция",
   "wallet.transaction.type.multiparty": "{currency} смешанная транзакция",
   "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
-  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Кошелек Byron-эры",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.deregister.deregister": "Deregister",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "Чтобы разделегирование вступило в силу необходимо 2 эпохи после окончания текущей эпохи",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.voting.transaction.success.button.label": "Информационная панель",
-  "wallet.voting.transaction.success.explanation": "Explainer TODO",
-  "wallet.voting.transaction.success.title": "Successfully Registered",
+  "wallet.voting.dialog.completeLabel": "Complete",
+  "wallet.voting.dialog.confirmPin": "Confirm PIN",
+  "wallet.voting.dialog.registerLabel": "Register",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
+  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.stepConfirm": "Confirm",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepQrCode": "QR Code",
+  "wallet.voting.dialog.title": "Register for Voting",
+  "wallet.voting.dialog.transactionLabel": "Transaction",
+  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
+  "wallet.voting.line3": "Download the Catalyst Voting App.",
+  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
+  "wallet.voting.lineTitle": "Register to vote on Fund 3",
   "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Скопировать в буфер обмена",
   "widgets.explorer.tooltip": "Перейти на {websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Создание перевода транзакции",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Проверка средств на адресах",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Получение адресов",
-  "yoroiTransfer.waiting.title.label": "Происходит восстановление кошелька",
-  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
-  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
-  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
-  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
-  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
-  "wallet.voting.line3": "Download the Catalyst Voting App.",
-  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
-  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
-  "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirm",
-  "wallet.voting.dialog.registerLabel": "Register",
-  "wallet.voting.dialog.transactionLabel": "Transaction",
-  "wallet.voting.dialog.stepQrCode": "QR Code",
-  "wallet.voting.dialog.title": "Register for Voting",
-  "wallet.voting.dialog.confirmPin": "Confirm PIN",
-  "wallet.voting.dialog.completeLabel": "Complete",
-  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin",
-  "button.buySellAda": "Buy/Sell ADA"
+  "yoroiTransfer.waiting.title.label": "Происходит восстановление кошелька"
 }
