--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "No es posible cargar el contenido",
   "app.errors.unexpectedError": "Sucedió algo inesperado. Por favor, inténtalo nuevamente.",
   "app.errors.unknowError": "Error desconocido.",
+  "button.buySellAda": "Comprar / Vender ADA",
+  "buysell.dialog.instructions": "Por favor seleccione sus preferencias. En la siguiente pantalla, confirme su selección pulsando la flecha verde de la parte superior derecha",
+  "buysell.dialog.manual": "Añadiré mi dirección manualmente",
+  "buysell.dialog.selectAddress": "Por favor, seleccione la dirección de recepción. Esto será compartido con el proveedor de terceros llamado Changelly para la compra / venta de ADA. ",
+  "buysell.dialog.title": "Comprar / Vender ADA",
   "crash.screen.title": "Yoroi se ha caído",
   "daedalusTransfer.error.noTransferTxError": "No hay ninguna transacción para ser enviada.",
   "daedalusTransfer.error.transferFundsError": "No se pudieron transferir los fondos.",
@@ -70,9 +75,11 @@
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo es obligatorio.",
   "global.errors.invalidPaperPassword": "La contraseña de la Billetera de Papel requiere al menos 10 caracteres.",
+  "global.errors.invalidPin": "PIN inválido",
   "global.errors.invalidRepeatPassword": "No coincide.",
   "global.errors.invalidWalletName": "El nombre de la billetera requiere un mínimo de 1 letra, y máximo de 40 letras.",
   "global.errors.invalidWalletPassword": "La contraseña de gastos requiere al menos 10 caracteres.",
+  "global.errors.pinDoesNotMatch": "El Pin No Corresponde",
   "global.invalidKeyFormat.label": "Clave inválida. Debería estar codificada en hexadecimal.",
   "global.invalidKeyLength.label": "Clave inválida. Debe tener {length} caracteres de longitud.",
   "global.invalidKeyLength2.label": "Clave inválida. Debería tener un largo de {lengths}.",
@@ -107,13 +114,13 @@
   "global.labels.note": "Nota:",
   "global.labels.optionalMemo": "Memo (opcional)",
   "global.labels.processing": "Procesando...",
-  "global.labels.register": "Registrarse",
   "global.labels.remove": "Remover",
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Guardar",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Clave de gastos",
   "global.labels.spendingKeyHash": "Hash de la clave de gastos",
+  "global.labels.stakepool": "!!!Stakepool Name",
   "global.labels.stakingKey": "Clave de delegación",
   "global.labels.stakingKeyHash": "Hash de la clave de delegación",
   "global.labels.upgrade": "Actualización",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Nota: La contraseña de la Billetera de Papel debe ser de al menos <strong>10 caracteres</strong> de longitud.",
-  "global.selectAsset.labael": "Seleccionar activo",
   "global.publicKey.explanation": "Las llaves públicas permiten ver el historial de la billetera, pero <strong>no</strong> permite gastar o mover los fondos de ninguna manera (la llave privada <strong>no está</strong> incluida)",
+  "global.selectAsset.labael": "Seleccionar activo",
   "global.staleTxnWarningLine1": "Tu billetera ha cambiado desde que creaste esta transacción.",
   "global.staleTxnWarningLine2": "Aún puedes enviar esta transacción, pero puede fallar.",
   "global.uriExplanation": "Permiten compartir fácilmente facturas con amigos y empresas, con sólo hacer clic en una URL.",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "¿Quieres incluir la clave <strong>pública</strong> de tu billetera en los registros de errores?",
   "wallet.includeKey.withKeyLabel": "Con la clave",
   "wallet.includeKey.withoutKeyLabel": "Sin la clave",
+  "wallet.insufficientFunds.subtitle": "Para participar se necesita al menos {requiredBalance} {tokenName}, pero sólo dispones de {currentBalance}. Las recompensas no retiradas no se incluyen en esta cantidad",
+  "wallet.insufficientFunds.title": "Fondos insuficientes",
   "wallet.nav.addButton": "Añadir billetera",
   "wallet.nav.allWalletsLabel": "Todas las billeteras",
   "wallet.nav.backButton": "Volver a mis billeteras",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "pendiente",
   "wallet.transaction.transactionAmount": "Monto de la transacción",
   "wallet.transaction.transactionId": "ID de la transacción",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transaction.type": "{currency} transacción",
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transacción intra-billetera",
   "wallet.transaction.type.multiparty": "{currency} transacción multipartita",
   "wallet.transaction.withdraw": "Retiro",
   "wallet.transaction.withdrawalsLabel": "Retiros",
-  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Billetera de la era Byron",
   "wallet.transfer.cards.shelley": "Billetera de la era Shelley",
   "wallet.transfer.deregister.deregister": "Desregistrar",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "Tomará 2 epochs, a partir del final del epoch actual, para que la des-delegación se haga efectiva",
   "wallet.unsupported.subtitle": "La billetera seleccionada no soporta esta funcionalidad",
   "wallet.unsupported.title": "Tipo de billetera no soportada",
-  "wallet.voting.transaction.success.button.label": "Página de Seguimiento",
-  "wallet.voting.transaction.success.explanation": "Explicación TODO",
-  "wallet.voting.transaction.success.title": "Registrado exitosamente",
+  "wallet.voting.dialog.completeLabel": "Completar",
+  "wallet.voting.dialog.confirmPin": "Confirmar PIN",
+  "wallet.voting.dialog.registerLabel": "Inscribirse",
+  "wallet.voting.dialog.step.confirm.line1": "Introduce el PIN, ya que lo necesitarás <strong>cada vez</strong> que quieras acceder a la aplicación Catalyst Voting.",
+  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.line1": "Por favor, anota este PIN, ya que lo necesitarás <strong>cada vez</strong> que quieras acceder a la aplicación Catalyst Voting.",
+  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.line2": "El siguiente código QR es el certificado generado que requiere la Catalyst App para poder participar en el proceso de votación de Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "También te sugerimos que hagas una captura de pantalla como copia de seguridad - no podrás acceder a este código QR después de hacer clic en Completar.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Utilice la aplicación Catalyst Voting para escanear el código QR",
+  "wallet.voting.dialog.step.register.line1": "Introduzca su contraseña de gastos para poder generar el certificado necesario para votar.",
+  "wallet.voting.dialog.step.trx.line1": "Confirma tu contraseña de gasto para registrar en la blockchain el certificado generado previamente para la votación.",
+  "wallet.voting.dialog.stepConfirm": "Confirmar",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepQrCode": "Código QR",
+  "wallet.voting.dialog.title": "Inscribirse para votar",
+  "wallet.voting.dialog.transactionLabel": "Transacción",
+  "wallet.voting.line2": "Antes de empezar, asegúrate de completar los siguientes pasos",
+  "wallet.voting.line3": "Descarga la aplicación Catalyst Voting App.",
+  "wallet.voting.line4": "Abre la Catalyst Voting App y haz clic en el botón Completar registro.",
+  "wallet.voting.lineTitle": "Registrarse para votar en el Fondo 3",
   "wallet.withdrawal.transaction.unregister": "Esta transacción desregistrará una o más claves de delegación, devolviendo las {refundAmount} {ticker} de tu depósito",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar al portapapeles",
   "widgets.explorer.tooltip": "Ir a {websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generando transacción de transferencia",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Verificando los fondos de las direcciones",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Obteniendo direcciones",
-  "yoroiTransfer.waiting.title.label": "La billetera está siendo restaurada",
-  "wallet.voting.dialog.step.confirm.line1": "Por favor, introduzca el PIN ya que se utilizará en un paso posterior para completar el proceso de registro dentro de la aplicación Catalyst Voting.",
-  "wallet.voting.dialog.step.pin.line1": "Anote este PIN, ya que se utilizará en un paso posterior para completar el proceso de registro dentro de la aplicación Catalyst Voting.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Utilice la aplicación Catalyst Voting para escanear el código QR",
-  "wallet.voting.dialog.step.qr.line2": "El siguiente código QR es el certificado generado que requiere la Catalyst App para poder participar en el proceso de votación de Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "También te sugerimos que hagas una captura de pantalla como copia de seguridad - no podrás acceder a este código QR después de hacer clic en Completar.",
-  "wallet.voting.dialog.step.register.line1": "Introduzca su contraseña de gastos para poder generar el certificado necesario para votar.",
-  "wallet.voting.lineTitle": "Cualquier ADA registrado en la transacción para votar será transferido desde tu wallet actualmente seleccionado",
-  "wallet.voting.line2": "Antes de empezar, asegúrate de completar los siguientes pasos",
-  "wallet.voting.line3": "Descarga la aplicación Catalyst Voting App.",
-  "wallet.voting.line4": "Abre la Catalyst Voting App y haz clic en el botón Completar registro.",
-  "wallet.voting.dialog.step.trx.line1": "Confirma tu contraseña de gasto para registrar en la blockchain el certificado generado previamente para la votación.",
-  "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirmar",
-  "wallet.voting.dialog.registerLabel": "Inscribirse",
-  "wallet.voting.dialog.transactionLabel": "Transacción",
-  "wallet.voting.dialog.stepQrCode": "Código QR",
-  "wallet.voting.dialog.title": "Inscribirse para votar",
-  "wallet.voting.dialog.confirmPin": "Confirmar PIN",
-  "wallet.voting.dialog.completeLabel": "Completar",
-  "global.errors.pinDoesNotMatch": "El Pin No Corresponde",
-  "global.errors.invalidPin": "PIN inválido",
-  "button.buySellAda": "Comprar/Vender ADA"
+  "yoroiTransfer.waiting.title.label": "La billetera está siendo restaurada"
 }
