--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "Impossibile caricare!",
   "app.errors.unexpectedError": "E' successo qualcosa di inaspettato. Riprovare, per favore.",
   "app.errors.unknowError": "Errore sconosciuto.",
+  "button.buySellAda": "Buy / Sell ADA",
+  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
+  "buysell.dialog.manual": "I will add my address manually",
+  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.title": "Buy / Sell ADA",
   "crash.screen.title": "Yoroi si è arrestato",
   "daedalusTransfer.error.noTransferTxError": "Non c'è nessuna transazione da inviare.",
   "daedalusTransfer.error.transferFundsError": "Impossibile trasferire fondi.",
@@ -70,9 +75,11 @@
   "global.copyTooltipMessage": "Copiato",
   "global.errors.fieldIsRequired": "Questo campo è obbligatorio.",
   "global.errors.invalidPaperPassword": "La password del portafoglio cartaceo richiede almeno 10 caratteri.",
+  "global.errors.invalidPin": "Invalid Pin",
   "global.errors.invalidRepeatPassword": "Non corrisponde.",
   "global.errors.invalidWalletName": "Il nome del portafoglio richiede un minimo di 1 lettera e ed un massimo 40 lettere.",
   "global.errors.invalidWalletPassword": "La password di spesa richiede almeno 10 caratteri.",
+  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
   "global.invalidKeyFormat.label": "Chiave non valida. Dovrebbe essere codificata in esadecimale.",
   "global.invalidKeyLength.label": "Chiave non valida. Dovrebbe essere lunga {length} caratteri.",
   "global.invalidKeyLength2.label": "Chiave non valida. Dovrebbe essere uno dei {lengths}.",
@@ -107,13 +114,13 @@
   "global.labels.note": "Nota:",
   "global.labels.optionalMemo": "Promemoria (opzionale)",
   "global.labels.processing": "In lavorazione...",
-  "global.labels.register": "Register",
   "global.labels.remove": "Rimuovere",
   "global.labels.rewardsLabel": "Ricompense",
   "global.labels.save": "Salvare",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Chiave di spesa",
   "global.labels.spendingKeyHash": "Hash della chiave di spesa",
+  "global.labels.stakepool": "!!!Stakepool Name",
   "global.labels.stakingKey": "Chiave di staking",
   "global.labels.stakingKeyHash": "Hash della chiave di staking",
   "global.labels.upgrade": "Aggiornamento",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Nota: la password del portafoglio cartaceo deve essere lunga almeno <strong>10 caratteri</strong>.",
-  "global.selectAsset.labael": "Select asset",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
+  "global.selectAsset.labael": "Select asset",
   "global.staleTxnWarningLine1": "Da quando hai creato questa transazione il tuo portafoglio è cambiato.",
   "global.staleTxnWarningLine2": "È ancora possibile inviare questa transazione ma potrebbe fallire.",
   "global.uriExplanation": "Queste opzioni ti consentono di condividere facilmente le fatture con amici e con aziende semplicemente facendo clic su un URL.",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "Volete includere la chiave <strong>pubblica</strong> del vostro portafoglio nei registri degli errori?",
   "wallet.includeKey.withKeyLabel": "Con chiave",
   "wallet.includeKey.withoutKeyLabel": "Senza chiave",
+  "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
+  "wallet.insufficientFunds.title": "Insufficient funds",
   "wallet.nav.addButton": "Aggiungi nuovo portafoglio",
   "wallet.nav.allWalletsLabel": "Tutti i portafogli",
   "wallet.nav.backButton": "Torna al mio portafoglio",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "in sospeso",
   "wallet.transaction.transactionAmount": "Importo della transazione",
   "wallet.transaction.transactionId": "ID della transazione",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transaction.type": "{currency} transazione",
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transazione intrawallet",
   "wallet.transaction.type.multiparty": "{currency} transazione multiparty",
   "wallet.transaction.withdraw": "Ritira",
   "wallet.transaction.withdrawalsLabel": "Prelievi",
-  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Portafoglio era-Byron",
   "wallet.transfer.cards.shelley": "Portafoglio era-Shelley",
   "wallet.transfer.deregister.deregister": "Deregistrazione",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "Ci vorranno 2 epoche dopo la fine dell'epoca attuale perché il ritiro delega abbia effetto",
   "wallet.unsupported.subtitle": "Il portafoglio selezionato non supporta questa funzionalità",
   "wallet.unsupported.title": "Tipo di portafoglio non supportato",
-  "wallet.voting.transaction.success.button.label": "Dashboard",
-  "wallet.voting.transaction.success.explanation": "Explainer TODO",
-  "wallet.voting.transaction.success.title": "Successfully Registered",
+  "wallet.voting.dialog.completeLabel": "Complete",
+  "wallet.voting.dialog.confirmPin": "Confirm PIN",
+  "wallet.voting.dialog.registerLabel": "Register",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
+  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.stepConfirm": "Confirm",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepQrCode": "QR Code",
+  "wallet.voting.dialog.title": "Register for Voting",
+  "wallet.voting.dialog.transactionLabel": "Transaction",
+  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
+  "wallet.voting.line3": "Download the Catalyst Voting App.",
+  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
+  "wallet.voting.lineTitle": "Register to vote on Fund 3",
   "wallet.withdrawal.transaction.unregister": "Questa transazione deregistrerà una o più chiavi di staking, restituendovi i vostri {refundAmount} {ticker} dal vostro deposito",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copia negli appunti",
   "widgets.explorer.tooltip": "Vai a {websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generazione di transazione di trasferimento",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Controllo dei fondi degli indirizzi",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Recupero degli indirizzi",
-  "yoroiTransfer.waiting.title.label": "Il portafoglio è in fase di ripristino",
-  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
-  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
-  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
-  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
-  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
-  "wallet.voting.line3": "Download the Catalyst Voting App.",
-  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
-  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
-  "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirm",
-  "wallet.voting.dialog.registerLabel": "Register",
-  "wallet.voting.dialog.transactionLabel": "Transaction",
-  "wallet.voting.dialog.stepQrCode": "QR Code",
-  "wallet.voting.dialog.title": "Register for Voting",
-  "wallet.voting.dialog.confirmPin": "Confirm PIN",
-  "wallet.voting.dialog.completeLabel": "Complete",
-  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin",
-  "button.buySellAda": "Buy/Sell ADA"
+  "yoroiTransfer.waiting.title.label": "Il portafoglio è in fase di ripristino"
 }
