--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "Het ophalen is niet mogelijk!",
   "app.errors.unexpectedError": "Er heeft zich een onverwachte storing voorgedaan, Probeer het alstublieft opnieuw.",
   "app.errors.unknowError": "Onbekende fout.",
+  "button.buySellAda": "Koop / Verkoop ADA",
+  "buysell.dialog.instructions": "Kies uw voorkeuren. Bevestig uw keuze op het volgende scherm door op de groene pijl rechtsboven te drukken",
+  "buysell.dialog.manual": "Ik voeg mijn adres met de handmatig toe",
+  "buysell.dialog.selectAddress": "Kies het ontvangende adres. Dit zal gedeeld worden met de derde partij genaamd \"Changelly\" voor het kopen / verkopen van ADA. ",
+  "buysell.dialog.title": "Koop / Verkoop ADA",
   "crash.screen.title": "Yoroi is gecrashed",
   "daedalusTransfer.error.noTransferTxError": "Er is geen transactie om te versturen.",
   "daedalusTransfer.error.transferFundsError": "Het is niet mogelijk om fondsen te versturen.",
@@ -70,9 +75,11 @@
   "global.copyTooltipMessage": "Gekopieerd",
   "global.errors.fieldIsRequired": "Verplicht veld.",
   "global.errors.invalidPaperPassword": "Het wachtwoord voor de \"Papieren\" Portemonnee moet uit minstens 10 karakters bestaan.",
+  "global.errors.invalidPin": "Foute pincode",
   "global.errors.invalidRepeatPassword": "Komt niet overeen.",
   "global.errors.invalidWalletName": "De naam van uw Portemonnee moet minimaal 1 en maximaal 40 letters bevatten.",
   "global.errors.invalidWalletPassword": "Het betaalwachtwoord moet uit minstens 10 karakters bestaan.",
+  "global.errors.pinDoesNotMatch": "Pincode niet juist",
   "global.invalidKeyFormat.label": "Ongeldige sleutel. Dient een hexa-decimaal getal te zijn.",
   "global.invalidKeyLength.label": "Ongeldige sleutel. Dient tenminste {length} karakters te bevatten.",
   "global.invalidKeyLength2.label": "Ongeldige sleutel. Moet zijn: een van {lengths}.",
@@ -107,13 +114,13 @@
   "global.labels.note": "Opmerking:",
   "global.labels.optionalMemo": "Memo (optioneel)",
   "global.labels.processing": "Verwerken...",
-  "global.labels.register": "Registreren",
   "global.labels.remove": "Verwijder",
   "global.labels.rewardsLabel": "Beloningen",
   "global.labels.save": "Bewaar",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Betaalsleutel",
   "global.labels.spendingKeyHash": "Vingerafdruk betaalsleutel",
+  "global.labels.stakepool": "!!!Naam van de Stakepool",
   "global.labels.stakingKey": "Stemsleutel",
   "global.labels.stakingKeyHash": "Vingerafdruk stemsleutel",
   "global.labels.upgrade": "Opwaarderen",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turks",
   "global.passwordInstructionsPaperWallet": "Opmerking: Het wachtwoord van een \"Papieren\" Portemonnee moet uit minstens <strong>10 karakters</strong> bestaan.",
-  "global.selectAsset.labael": "Kies een bedrijfsmiddel",
   "global.publicKey.explanation": "Met openbare sleutels kan de portefeuillegeschiedenis van de portemonnee worden bekeken, maar het is <strong> niet </strong> mogelijk om het geld op enigerlei wijze uit te geven of te verplaatsen (De privésleutel is <strong> niet </strong> inbegrepen)",
+  "global.selectAsset.labael": "Kies een bedrijfsmiddel",
   "global.staleTxnWarningLine1": "Uw portemonnee is veranderd sinds het aanmaken van deze transactie.",
   "global.staleTxnWarningLine2": "U kunt deze transactie nog proberen te versturen maar het het kan fout gaan.",
   "global.uriExplanation": "Deze stellen u in staat rekeningen met vrienden of zakelijke partners te delen door eenvoudig op een URL te klikken.",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "Wilt u de <strong> openbare </strong> sleutel van uw portemonnee opnemen in de foutenlogboeken?",
   "wallet.includeKey.withKeyLabel": "Met sleutel",
   "wallet.includeKey.withoutKeyLabel": "Zonder sleutel",
+  "wallet.insufficientFunds.subtitle": "Voor deelname is minimaal {requiredBalance} {tokenName} nodig, maar je hebt alleen {currentBalance}. Niet-opgenomen beloningen zijn niet inbegrepen in dit bedrag",
+  "wallet.insufficientFunds.title": "Onvoldoende saldo",
   "wallet.nav.addButton": "Nieuwe Portemonnee",
   "wallet.nav.allWalletsLabel": "Alle portemonnees",
   "wallet.nav.backButton": "Terug naar mijn Portemonnees",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "in afwachting",
   "wallet.transaction.transactionAmount": "Transactievergoeding",
   "wallet.transaction.transactionId": "Transactie ID",
+  "wallet.transaction.transactionMetadata": "Transactie Metadata",
   "wallet.transaction.type": "{currency} transactie",
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transactiekosten",
   "wallet.transaction.type.multiparty": "{currency} meerparrijen transactie",
   "wallet.transaction.withdraw": "Opname",
   "wallet.transaction.withdrawalsLabel": "Opnames",
-  "wallet.transaction.transactionMetadata": "Transactie Metadata",
   "wallet.transfer.cards.byron": "Byron-tijdperk Portemonnee",
   "wallet.transfer.cards.shelley": "Shelley-tijdperk portemonnee",
   "wallet.transfer.deregister.deregister": "Uitschrijven",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "Het duurt 2 periodes na het einde van het huidige tijdvak om de delegatie in werking te laten treden",
   "wallet.unsupported.subtitle": "De gekozen portemonnee ondersteunt deze functionaliteit niet",
   "wallet.unsupported.title": "Dit type portemonnee wordt niet ondersteund",
-  "wallet.voting.transaction.success.button.label": "Overzichtspagina",
-  "wallet.voting.transaction.success.explanation": "Uitleg \"TODO\" (Te Doen)",
-  "wallet.voting.transaction.success.title": "Met succes geregistreerd",
+  "wallet.voting.dialog.completeLabel": "Klaar",
+  "wallet.voting.dialog.confirmPin": "Bevestig de pincode",
+  "wallet.voting.dialog.registerLabel": "Registreer",
+  "wallet.voting.dialog.step.confirm.line1": "Voer de pincode in, want u hebt deze <strong> elke keer </strong> nodig als u de Catalyst \"Stem\"-app wilt gebruiken.",
+  "wallet.voting.dialog.step.pin.actionButton": "!!!Bevestig dat de pincode is opgeschreven",
+  "wallet.voting.dialog.step.pin.line1": "Schrijf deze pincode op, want u heeft deze <strong> elke keer </strong> nodig als u de Catalyst \"Stem\"-app wilt gebruiken.",
+  "wallet.voting.dialog.step.qr.actionButton": "!!!Bevestig dat de QR-code bewaard wordt",
+  "wallet.voting.dialog.step.qr.line2": "De volgende QR-code is het certificaat (gegenereerd) dat vereist is door de Catalyst Stem applicatie om te kunnen deelnemen aan het stemproces van Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "We raden aan om een screenshot van de QR-code te maken als back-up - je hebt geen toegang meer tot deze QR-code nadat je op Voltooien hebt geklikt.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Gebruik de Catalyst Stem applicatie om de QR-code te scannen",
+  "wallet.voting.dialog.step.register.line1": "Voer uw bestedingswachtwoord in om het vereiste certificaat voor stemmen te kunnen genereren.",
+  "wallet.voting.dialog.step.trx.line1": "Bevestig uw bestedingswachtwoord om het eerder gegenereerde certificaat voor stemmen te registreren in de blockchain.",
+  "wallet.voting.dialog.stepConfirm": "Bevestig",
+  "wallet.voting.dialog.stepPin": "Pincode",
+  "wallet.voting.dialog.stepQrCode": "QR-code",
+  "wallet.voting.dialog.title": "Registreer om te stemmen",
+  "wallet.voting.dialog.transactionLabel": "Transactie",
+  "wallet.voting.line2": "Zorg ervoor dat u de onderstaande stappen uitvoert voordat u begint",
+  "wallet.voting.line3": "Download de Catalyst Stem-applicatie.",
+  "wallet.voting.line4": "Open de Catalyst Stem-applicatie en klik op de knop \"Registratie voltooien\".",
+  "wallet.voting.lineTitle": "Registreer uzelf om op Fonds 3 te stemmen",
   "wallet.withdrawal.transaction.unregister": "Met deze transactie wordt de registratie van een of meer stemsleutels ongedaan gemaakt, waardoor u uw {refundAmount} {ticker} van uw storting terugkrijgt",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Kopieer naar klembord",
   "widgets.explorer.tooltip": "Ga naar {websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Genereren van een transfer transactie",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Controleren van de fondsadressen",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Ophalen van de adressen",
-  "yoroiTransfer.waiting.title.label": "De Portemonnee wordt teruggeplaatst",
-  "wallet.voting.dialog.step.confirm.line1": "124 / 5000\nVertaalresultaten\nVoer de pincode in, aangezien deze in een latere stap zal worden gebruikt om het registratieproces in de Catalyst Stem-applicatie te voltooien.",
-  "wallet.voting.dialog.step.pin.line1": "124 / 5000\nSchrijf de pincode op en bewaar deze goed omdat deze in een latere stap zal worden gebruikt om het registratieproces in de Catalyst Stem-applicatie te voltooien.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Gebruik de Catalyst Stem applicatie om de QR-code te scannen",
-  "wallet.voting.dialog.step.qr.line2": "De volgende QR-code is het certificaat (gegenereerd) dat vereist is door de Catalyst Stem applicatie om te kunnen deelnemen aan het stemproces van Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "We raden aan om een screenshot van de QR-code te maken als back-up - je hebt geen toegang meer tot deze QR-code nadat je op Voltooien hebt geklikt.",
-  "wallet.voting.dialog.step.register.line1": "Voer uw bestedingswachtwoord in om het vereiste certificaat voor stemmen te kunnen genereren.",
-  "wallet.voting.lineTitle": "Elke ADA die is geregistreerd in een transactie om te stemmen, wordt overgebracht van uw, gekozen, portemonnee",
-  "wallet.voting.line2": "Zorg ervoor dat u de onderstaande stappen uitvoert voordat u begint",
-  "wallet.voting.line3": "Download de Catalyst Stem-applicatie.",
-  "wallet.voting.line4": "Open de Catalyst Stem-applicatie en klik op de knop \"Registratie voltooien\".",
-  "wallet.voting.dialog.step.trx.line1": "Bevestig uw bestedingswachtwoord om het eerder gegenereerde certificaat voor stemmen te registreren in de blockchain.",
-  "wallet.voting.dialog.stepPin": "Pincode",
-  "wallet.voting.dialog.stepConfirm": "Bevestig",
-  "wallet.voting.dialog.registerLabel": "Registreer",
-  "wallet.voting.dialog.transactionLabel": "Transactie",
-  "wallet.voting.dialog.stepQrCode": "QR-code",
-  "wallet.voting.dialog.title": "Registreer om te stemmen",
-  "wallet.voting.dialog.confirmPin": "Bevestig de pincode",
-  "wallet.voting.dialog.completeLabel": "Klaar",
-  "global.errors.pinDoesNotMatch": "Pincode niet juist",
-  "global.errors.invalidPin": "Foute pincode",
-  "button.buySellAda": "Koop/Verkoop ADA"
+  "yoroiTransfer.waiting.title.label": "De Portemonnee wordt teruggeplaatst"
 }
