--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "Não foi possível carregar!",
   "app.errors.unexpectedError": "Algo inesperado aconteceu. Por favor tente novamente.",
   "app.errors.unknowError": "Erro desconhecido.",
+  "button.buySellAda": "Buy / Sell ADA",
+  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
+  "buysell.dialog.manual": "I will add my address manually",
+  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.title": "Buy / Sell ADA",
   "crash.screen.title": "Yoroi travou",
   "daedalusTransfer.error.noTransferTxError": "Não há transação a ser enviada.",
   "daedalusTransfer.error.transferFundsError": "Não é possível transferir fundos.",
@@ -70,9 +75,11 @@
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo é obrigatório.",
   "global.errors.invalidPaperPassword": "A senha da Carteira de Papel requer pelo menos 10 caracteres.",
+  "global.errors.invalidPin": "Invalid Pin",
   "global.errors.invalidRepeatPassword": "Não corresponde.",
   "global.errors.invalidWalletName": "O nome da wallet precisa conter de 1 á 40 caracteres.",
   "global.errors.invalidWalletPassword": "A senha para pagamentos deve conter pelo menos 10 caracteres.",
+  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
   "global.invalidKeyFormat.label": "Chave Inválida. Deve ser código hexadecimal.",
   "global.invalidKeyLength.label": "Chave inválida. Deve ter {length} carácteres.",
   "global.invalidKeyLength2.label": "Chave inválida. Deve ser um de {lengths}.",
@@ -107,13 +114,13 @@
   "global.labels.note": "Nota:",
   "global.labels.optionalMemo": "Nota (opcional)",
   "global.labels.processing": "Processando...",
-  "global.labels.register": "Register",
   "global.labels.remove": "Remover",
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Salvar",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Chave de gasto",
   "global.labels.spendingKeyHash": "Hash da chave de gasto",
+  "global.labels.stakepool": "!!!Stakepool Name",
   "global.labels.stakingKey": "Chave de Stake",
   "global.labels.stakingKeyHash": "Hash da chave de Stake",
   "global.labels.upgrade": "Upgrade",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turco",
   "global.passwordInstructionsPaperWallet": "Nota: a senha da Carteira de papel precisa ter pelo menos <strong> 10 caracteres </strong>.",
-  "global.selectAsset.labael": "Select asset",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
+  "global.selectAsset.labael": "Select asset",
   "global.staleTxnWarningLine1": "Sua carteira foi alterada desde a criação dessa transação.",
   "global.staleTxnWarningLine2": "Você ainda pode enviar essa transação mas ela deve falhar.",
   "global.uriExplanation": "Eles permitem que você compartilhe faturas facilmente com amigos e empresas clicando em um URL.",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "Você gostaria de incluir sua chave <strong>pública</strong> nas informações de erro?",
   "wallet.includeKey.withKeyLabel": "Com chave",
   "wallet.includeKey.withoutKeyLabel": "Sem chave",
+  "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
+  "wallet.insufficientFunds.title": "Insufficient funds",
   "wallet.nav.addButton": "Adicionar nova carteira",
   "wallet.nav.allWalletsLabel": "Todas as cateiras",
   "wallet.nav.backButton": "Voltar para carteiras",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "pendente",
   "wallet.transaction.transactionAmount": "Valor da transação",
   "wallet.transaction.transactionId": "ID da transação",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transaction.type": "{currency} transação",
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transação interna",
   "wallet.transaction.type.multiparty": "{currency} transação de múltiplas partes",
   "wallet.transaction.withdraw": "Retirar",
   "wallet.transaction.withdrawalsLabel": "Retiradas",
-  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Carteira Byron-era",
   "wallet.transfer.cards.shelley": "Carteira era-Shelley",
   "wallet.transfer.deregister.deregister": "Desregistrar",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "Levará duas épocas após o final da época atual para que a remoção da delegação entre em vigor",
   "wallet.unsupported.subtitle": "A carteira selecionada não suporta esta funcionalidade",
   "wallet.unsupported.title": "Tipo de carteira não suportado",
-  "wallet.voting.transaction.success.button.label": "Página do painel",
-  "wallet.voting.transaction.success.explanation": "Explicador para fazer",
-  "wallet.voting.transaction.success.title": "Registrado com sucesso",
+  "wallet.voting.dialog.completeLabel": "Complete",
+  "wallet.voting.dialog.confirmPin": "Confirm PIN",
+  "wallet.voting.dialog.registerLabel": "Register",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
+  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.stepConfirm": "Confirm",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepQrCode": "QR Code",
+  "wallet.voting.dialog.title": "Register for Voting",
+  "wallet.voting.dialog.transactionLabel": "Transaction",
+  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
+  "wallet.voting.line3": "Download the Catalyst Voting App.",
+  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
+  "wallet.voting.lineTitle": "Register to vote on Fund 3",
   "wallet.withdrawal.transaction.unregister": "Essa transação irá revogar uma ou mais chave de participação, reembolsando suas {refundAmount}{ticker} pagas como depósito no registro de sua chave de participação",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar para área de transferência",
   "widgets.explorer.tooltip": "Ir para {websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Gerando transação de transferência",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Verificando endereços dos recursos",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Buscando endereços",
-  "yoroiTransfer.waiting.title.label": "A wallet está sendo restaurada",
-  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
-  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
-  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
-  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
-  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
-  "wallet.voting.line3": "Download the Catalyst Voting App.",
-  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
-  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
-  "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirm",
-  "wallet.voting.dialog.registerLabel": "Register",
-  "wallet.voting.dialog.transactionLabel": "Transaction",
-  "wallet.voting.dialog.stepQrCode": "QR Code",
-  "wallet.voting.dialog.title": "Register for Voting",
-  "wallet.voting.dialog.confirmPin": "Confirm PIN",
-  "wallet.voting.dialog.completeLabel": "Complete",
-  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin",
-  "button.buySellAda": "Buy/Sell ADA"
+  "yoroiTransfer.waiting.title.label": "A wallet está sendo restaurada"
 }
