--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -47,6 +47,11 @@
   "app.errors.unableToLoad": "无法加载！",
   "app.errors.unexpectedError": "发生意外错误。请重试。",
   "app.errors.unknowError": "未知错误。",
+  "button.buySellAda": "买/卖 ADA",
+  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
+  "buysell.dialog.manual": "I will add my address manually",
+  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.title": "买/卖 ADA",
   "crash.screen.title": "Yoroi意外终止",
   "daedalusTransfer.error.noTransferTxError": "没有要发送的交易。",
   "daedalusTransfer.error.transferFundsError": "无法转账。",
@@ -64,18 +69,20 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "正在获取地址",
   "daedalusTransfer.waiting.title.label": "正在恢复 Daedalus 钱包...",
   "daedalusTransfer.waiting.warning": "这会花费较长时间，网络不佳可能失败",
-  "decryption.label": "Decryption password",
+  "decryption.label": "解密密码",
   "global.blog.learnMore": "您可以阅读我们的{blogLink} 以了解更多。",
   "global.contact": "联系支持",
   "global.copyTooltipMessage": "已复制",
   "global.errors.fieldIsRequired": "该字段为必填字段。",
   "global.errors.invalidPaperPassword": "纸钱包密码至少要10字符。",
+  "global.errors.invalidPin": "无效的PIN码",
   "global.errors.invalidRepeatPassword": "不匹配。",
   "global.errors.invalidWalletName": "钱包名称需要最少 1 个，最多 40 个字符。",
   "global.errors.invalidWalletPassword": "支付密码至少要10字符。",
+  "global.errors.pinDoesNotMatch": "PIN码不匹配",
   "global.invalidKeyFormat.label": "无效密钥。应为16进制编码的。",
   "global.invalidKeyLength.label": "无效密钥。应至少{length} 字符长。",
-  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.invalidKeyLength2.label": "无效密钥。长度应为{lengths}",
   "global.key.label": "密钥",
   "global.labael.undelegate": "取消委托",
   "global.label.addToAddressbook": "添加至地址簿",
@@ -107,13 +114,13 @@
   "global.labels.note": "注意：",
   "global.labels.optionalMemo": "备注（可选）",
   "global.labels.processing": "处理中...",
-  "global.labels.register": "注册",
   "global.labels.remove": "移除",
   "global.labels.rewardsLabel": "奖励",
   "global.labels.save": "保存",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "消费密钥",
   "global.labels.spendingKeyHash": "消费密钥Hash",
+  "global.labels.stakepool": "权益池名称！！！",
   "global.labels.stakingKey": "委托密钥",
   "global.labels.stakingKeyHash": "委托密钥Hash",
   "global.labels.upgrade": "升级",
@@ -132,8 +139,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "注意: 纸钱包密码长度至少为<strong>10个字符</strong>。",
-  "global.selectAsset.labael": "选择资产",
   "global.publicKey.explanation": "公钥可以用于显示钱包的历史交易，但<strong>无法</strong>用于支付或转移其中的资金。",
+  "global.selectAsset.labael": "选择资产",
   "global.staleTxnWarningLine1": "钱包自您创建此交易后已有变动。",
   "global.staleTxnWarningLine2": "您仍可以发送此交易但可能失败。",
   "global.uriExplanation": "这些功能使您只需单击URL，即可轻松与朋友和企业共享发票。",
@@ -333,7 +340,7 @@
   "uri.generate.dialog.title": "生成链接",
   "uri.invalid.dialog.title": "无效的链接地址",
   "uri.invalid.dialog.warning.invalidAddressText1": "无法找到支持此地址类型的钱包。",
-  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "请联系接收方确认地址，并确保您至少有一个钱包支持此地址类型。",
   "uri.invalid.dialog.warning.text1": "你所点击的链接无效",
   "uri.invalid.dialog.warning.text2": "请咨询收款方核验格式",
   "uri.landing.dialog.confirm.label": "我理解",
@@ -437,7 +444,7 @@
   "wallet.currency.pick.cardano": "Cardano是第一个被证明安全的权益证明（PoS）协议。",
   "wallet.currency.pick.ergo": "Ergo基于数十年的区块链理论研究研发了高级的加密货币功能和新的DeFi功能",
   "wallet.currency.pick.header": "选择一个货币或交易平台",
-  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
+  "wallet.currency.pick.testnetDescription": "测试网是用于测试的额外的区块链。这会让开发者或测试人员无需真实货币就能参与测试。",
   "wallet.dashboard.empty.text": "前往委托界面选择你想要委托的权益池。",
   "wallet.dashboard.empty.title": "你尚未委托你的{ticker}",
   "wallet.dashboard.epochEndTitle": "距离本时代结束",
@@ -519,6 +526,8 @@
   "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
   "wallet.includeKey.withKeyLabel": "With key",
   "wallet.includeKey.withoutKeyLabel": "Without key",
+  "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
+  "wallet.insufficientFunds.title": "资金不足",
   "wallet.nav.addButton": "添加新钱包",
   "wallet.nav.allWalletsLabel": "所有钱包",
   "wallet.nav.backButton": "回到我的钱包",
@@ -567,7 +576,7 @@
   "wallet.receive.page.noResultsFoundLabel": "未发现结果",
   "wallet.receive.page.notFoundAnyAddresses": "无法找到复合您的搜索条件的任何地址",
   "wallet.receive.page.outputAmountUTXO": "余额（UTXO总和）",
-  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine1": "奖励地址存放着您的奖励，用于验证委托偏好的任何改变。",
   "wallet.receive.page.rewardAddressLine2": "您无法将{ticker} 发送至奖励地址，但我们显示出来，为审计之用。",
   "wallet.receive.page.unmangeLabel": "纠正授权偏好",
   "wallet.receive.page.verifyAddressLabel": "校验地址",
@@ -641,7 +650,7 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "修改支付密码",
   "wallet.settings.delete.accept": "我仍然可以恢复该钱包",
   "wallet.settings.delete.warning2": "请仔细检查您仍然可以恢复该钱包。否则，删除钱包可能会导致不可挽回的资金损失。",
-  "wallet.settings.export.explanation": "This can be used to transfer a wallet between devices.",
+  "wallet.settings.export.explanation": "者可用于在不同设备间转移钱包。",
   "wallet.settings.export.label": "导出钱包",
   "wallet.settings.name.label": "钱包名称",
   "wallet.settings.passwordLastUpdated": "上次更新的 {lastUpdated}",
@@ -708,13 +717,13 @@
   "wallet.transaction.state.pending": "确认中",
   "wallet.transaction.transactionAmount": "交易金额",
   "wallet.transaction.transactionId": "交易 ID",
+  "wallet.transaction.transactionMetadata": "交易元数据",
   "wallet.transaction.type": "{currency} 交易",
   "wallet.transaction.type.exchange": "交易所",
   "wallet.transaction.type.intrawallet": "{currency} 钱包内交易",
   "wallet.transaction.type.multiparty": "{currency} 多方交易",
   "wallet.transaction.withdraw": "赎回",
   "wallet.transaction.withdrawalsLabel": "赎回",
-  "wallet.transaction.transactionMetadata": "交易元数据",
   "wallet.transfer.cards.byron": "Byron时期钱包",
   "wallet.transfer.cards.shelley": "Shelly时期钱包",
   "wallet.transfer.deregister.deregister": "取消注册",
@@ -732,9 +741,27 @@
   "wallet.undelegation.transaction.explanationLine2": "撤销委托要在当前时代结束后的2个时代才能生效",
   "wallet.unsupported.subtitle": "所选的钱包不支持此功能",
   "wallet.unsupported.title": "钱包类型暂不支持",
-  "wallet.voting.transaction.success.button.label": "总览页面",
-  "wallet.voting.transaction.success.explanation": "Explainer TODO",
-  "wallet.voting.transaction.success.title": "成功注册",
+  "wallet.voting.dialog.completeLabel": "完成",
+  "wallet.voting.dialog.confirmPin": "确认PIN",
+  "wallet.voting.dialog.registerLabel": "注册",
+  "wallet.voting.dialog.step.confirm.line1": "请输入PIN码，之后<strong>每次</strong>使用Catalyst投票应用都需要使用。",
+  "wallet.voting.dialog.step.pin.actionButton": "确认我已记下PIN码！！！",
+  "wallet.voting.dialog.step.pin.line1": "请写下PIN码，之后<strong>每次</strong>使用Catalyst投票应用都需要使用。",
+  "wallet.voting.dialog.step.qr.actionButton": "确认我已保存了二维码！！！",
+  "wallet.voting.dialog.step.qr.line2": "下方的二维码是Catalyst应用需要的证书，能够用于在Cardano网络上参与投票。",
+  "wallet.voting.dialog.step.qr.line3": "此外我们建议您截图作为备份 - 在点击完成后你无法再次获得该二维码。",
+  "wallet.voting.dialog.step.qr.lineTitle": "使用Catalyst投票应用扫描此二维码",
+  "wallet.voting.dialog.step.register.line1": "输入支付密码以生成用于投票所需的证书。",
+  "wallet.voting.dialog.step.trx.line1": "确认您的支付密码，将之前生成的用于投票的证书在区块链网络中注册。",
+  "wallet.voting.dialog.stepConfirm": "确认",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepQrCode": "二维码",
+  "wallet.voting.dialog.title": "注册以投票",
+  "wallet.voting.dialog.transactionLabel": "交易",
+  "wallet.voting.line2": "在您开始之前，请确保完成了下列步骤",
+  "wallet.voting.line3": "下载Catalyst投票应用。",
+  "wallet.voting.line4": "打开Catalyst投票应用，点击完成注册按钮。",
+  "wallet.voting.lineTitle": "注册并给资金3投票",
   "wallet.withdrawal.transaction.unregister": "此交易将取消注册一个或多个委托密钥，从而从您的存款中退还您的{refundAmount}{ticker}。",
   "widgets.copyableaddress.addressCopyTooltipMessage": "复制到剪贴板",
   "widgets.explorer.tooltip": "前往{websiteName}",
@@ -756,27 +783,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "正在生成转账交易",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "正在检查资金地址",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "正在获取地址",
-  "yoroiTransfer.waiting.title.label": "正在恢复钱包",
-  "wallet.voting.dialog.step.confirm.line1": "请输入PIN码，它会用于后一个步骤以完成在Catalyst投票应用中的注册程序。",
-  "wallet.voting.dialog.step.pin.line1": "请写下该PIN码，它会用于后一个步骤以完成在Catalyst投票应用中的注册程序。",
-  "wallet.voting.dialog.step.qr.lineTitle": "使用Catalyst 投票应用扫描此二维码",
-  "wallet.voting.dialog.step.qr.line2": "下方的二维码是Catalyst应用需要的证书，能够用于在Cardano网络上参与投票。",
-  "wallet.voting.dialog.step.qr.line3": "此外我们建议您截图作为备份 - 在点击完成后你无法再次获得该二维码。",
-  "wallet.voting.dialog.step.register.line1": "输入支付密码以生成用于投票所需的证书。",
-  "wallet.voting.lineTitle": "用于投票交易的ADA将会从选定的钱包转移支付。",
-  "wallet.voting.line2": "在您开始之前，请确保完成了下列步骤",
-  "wallet.voting.line3": "下载Catalyst 投票应用。",
-  "wallet.voting.line4": "打开Catalyst投票应用，点击完成注册按钮。",
-  "wallet.voting.dialog.step.trx.line1": "确认您的支付密码，将之前生成的用于投票的证书在区块链网络中注册。",
-  "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "确认",
-  "wallet.voting.dialog.registerLabel": "注册",
-  "wallet.voting.dialog.transactionLabel": "交易",
-  "wallet.voting.dialog.stepQrCode": "二维码",
-  "wallet.voting.dialog.title": "注册以投票",
-  "wallet.voting.dialog.confirmPin": "确认PIN",
-  "wallet.voting.dialog.completeLabel": "完成",
-  "global.errors.pinDoesNotMatch": "PIN码不匹配",
-  "global.errors.invalidPin": "无效的PIN码",
-  "button.buySellAda": "买/卖 ADA"
+  "yoroiTransfer.waiting.title.label": "正在恢复钱包"
 }
